fix(CreateLeaderboardGroup): increase `modalContent` gap between items

--- a/src/components/CreateLeaderboardGroup/CreateLeaderboardGroup.module.scss
+++ b/src/components/CreateLeaderboardGroup/CreateLeaderboardGroup.module.scss
@@ -6,6 +6,6 @@
 .modalContent {
   display: flex;
   flex-direction: column;
-  gap: var(--size-16);
+  gap: var(--size-32);
   background-color: var(--color-bg-3);
 }
